--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-208.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.59MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.69MB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-3.09MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-203.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.21MB/s(Youtube:不良林), server: 36.134.156.5, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
   - {name: 🇨🇳 中国-2.10MB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-576.7KB/s(Youtube:不良林), server: 111.45.22.136, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇯🇵 日本-3.63MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇸🇬 新加坡-2.25MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.37MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇺🇸 美国-4.81MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.97MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.33MB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-11.61MB/s(Youtube:不良林), server: opt11.boom.party, port: 21000, type: ssr, cipher: aes-256-cfb, password: Uk92CS, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 343767:3StTW5, obfs-param: download.windowsupdate.com}
+  - {name: 🇨🇳 中国-3.49MB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-2.38MB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-1.57MB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-363.3KB/s(Youtube:不良林), server: 116.129.254.177, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-208.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-576.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-208.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-576.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-208.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-576.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-208.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-576.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-208.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-576.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-208.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-576.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-208.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-576.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
